# EfficientSam3-Distillation

./: .gitignore  pyproject.toml
configs/datasets/: coco_val2017_fixed10_prompts.json
data/: create_sa1b_subset.py  download_mose.sh  download_sa1b.sh  download_sa1b_hf.sh  reorg_sa1b.py
data/manifests/: coco_val2017_fixed10.jsonl  (+1 more)
docs/: IMAGE_ENCODER_MATRIX_E2E_PLAN.md  RTX5090_IMAGE_ENCODER_DISTILLATION.md  RUN_RECORD_L40S_IMAGE_DISTILL_SMOKE.md  TINYVIT21_SAM3_PROMPT_KD_PLAN.md
notebooks/: distilled_image_encoder_interactive_eval.ipynb
scripts/: download_hf_file_git.sh  preflight_image_encoder_distill.sh  prepare_image_encoder_distill_assets.sh  prepare_sa1b_fixed_splits.sh  prepare_tinyvit21_prompt_kd_assets.sh  run_coco_prompt_eval_matrix.sh  run_image_encoder_distill_matrix.sh  run_image_encoder_distill_smoke.sh  run_image_encoder_finetune_matrix.sh  run_saco_text_teacher_embedding_cache.sh  run_tinyvit21_prompt_kd_smoke.sh  run_tinyvit21_shape_check.sh  run_tinyvit21_stage1_train_after_cache.sh  slurm_12arch_gpu_smoke.sbatch  slurm_eval_distilled_image_encoder.sbatch  slurm_l40s_image_distill_smoke.sbatch  slurm_prepare_image_encoder_assets.sbatch  slurm_tinyvit21_prompt_kd_smoke_body.sbatch  submit_h100_tinyvit21_prompt_kd_smoke.sh  submit_prompt_kd_asset_cache.sh  submit_saco_text_teacher_cache.sh  submit_tinyvit21_stage1_train_after_cache.sh
stage1/: config.py  model.py  save_embedding_image_stage1.py  train_image_encoder_stage1.py  train_text_encoder_stage1.py  utils.py
stage1_geometry_finetune/: config.py  convert_geometry_finetune.py  model.py  train_geometry_finetune.py
stage_prompt_kd/: __init__.py  checkpointing.py  losses.py  manifest.py  shape_check.py  train_smoke.py
tests/: test_prompt_kd_scaffolding.py  test_stage1_checkpoint_policy.py
tools/: build_coco_prompt_manifest.py  eval_distilled_image_encoder.py  eval_efficientsam3_coco_prompts.py
(+15 files in other folders)
